2003-07-18  Don Porter  <dgp@users.sourceforge.net>

	* doc/AddErrInfo.3:     Improved consistency of documentation
	* doc/CrtTrace.3:       by using "null" everywhere to refer to
	* doc/Encoding.3:       the character '\0', and using "NULL"
	* doc/Eval.3:           everywhere to refer to the value of a
	* doc/GetIndex.3:       pointer that points to nowhere.
	* doc/Hash.3:           Also dropped references to ASCII that
	* doc/LinkVar.3:        are no longer true, and standardized on
	* doc/Macintosh.3:      the hyphenated spelling of "null-terminated".
	* doc/OpenFileChnl.3:
	* doc/SetVar.3:
	* doc/StringObj.3:
	* doc/Utf.3:

	* doc/CrtSlave.3 (Tcl_MakeSafe):  Removed warning about possible
	deprecation (no TIP on that).

2003-07-17  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Makefile: added var to allow overriding of tclsh used
	during html help building (Landon Fuller).

2003-07-16  Mumit Khan  <khan@nanotech.wisc.edu>

	* generic/tclIOUtil.c (SetFsPathFromAny): Add Cygwin specific
	code to convert POSIX filename to native format.
	* generic/tclFileName.c (Tcl_TranslateFileName): And remove from here.
	(TclDoGlob): Adjust for cygwin and append / for dirs instead of \
	* win/tclWinFile.c (TclpObjChdir): Use chdir on Cygwin.

2003-07-16  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tclWinFile.c (TclpObjChdir): 

	* library/safe.tcl (FileInAccessPath): normalize paths before
	comparison. [Bug 759607] (myers)

	* unix/tclUnixNotfy.c (NotifierThreadProc): correct size of found
	and word vars from int to long. [Bug 767578] (hgo)

2003-07-16  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* doc/CrtSlave.3 (Tcl_MakeSafe): Updated documentation to strongly
	discourage use.  IMHO code outside the core that uses this
	function is a bug...  [Bug 655300]

2003-07-16  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tcl.h:       add recognition of -DTCL_UTF_MAX=6 on the
	* generic/regcustom.h: make line to support UCS-4 mode.  No config